# mison

./: CONTRIBUTING.md  README.md  commitsCrawler.py  esoccExtension.py  pyproject.toml  test.csv
data/: eshop_commits_2.0.0.csv  eshop_commits_2.0.5.csv  eshop_commits_2.0.6.csv  eshop_commits_2.0.7.csv  eshop_commits_2.0.8.csv  eshop_commits_2.2.0.csv  eshop_commits_2.2.1.csv  eshop_commits_205.csv  eshop_commits_206.csv  eshop_commits_220.csv  eshop_commits_221.csv  eshop_commits_3.0.0.csv  eshop_commits_5.0.0.csv  eshop_network_files_200.csv  eshop_network_files_205.csv  eshop_network_files_208.csv  eshop_network_files_220.csv  eshop_network_files_310.csv  eshop_network_files_600.csv  tt_commits_0.0.1.csv  tt_commits_0.0.2.csv  tt_commits_0.0.3.csv  tt_commits_0.0.4.csv  tt_commits_0.1.0.csv  tt_commits_0.2.0.csv  tt_commits_1.0.0.csv  tt_network_file_0.0.1.csv  tt_network_file_0.0.3.csv  tt_network_file_0.0.4.csv  tt_network_file_0.1.0.csv  tt_network_file_0.2.0.csv  tt_network_file_1.0.0.csv  tt_network_service_0.0.1.csv  tt_network_service_0.0.3.csv  tt_network_service_0.0.4.csv  tt_network_service_0.1.0.csv  tt_network_service_1.0.0.csv
mappings/: eshoponcontainers.py
mison/: 2024.csv  __init__.py  __main__.py  eshop_200.csv  eshop_205.csv  eshop_208.csv  eshop_220.csv  eshop_310.csv  eshop_600.csv  eshop_commits_200.csv  eshop_commits_208.csv  eshop_commits_310.csv  eshop_commits_600.csv  mine.py  mison.py  network.py
mison/mappings/: eshoponcontainers.py  trainticket.py
mison/miner/: __init__.py  mine.py  miner.py
mison/network/: __init__.py  network.py
mison/network/collaboration/: __init__.py  collaboration.py
mison/network/coupling/: __init__.py  coupling.py
