[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mison"
authors = [
    {name = "Alexander Bakhtin", email = "alexander.bakhtin@protonmail.com"}]
description = "MIcroService Organisational Network mining"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "microservice",
    "network",
    "collaboration",
    "mining"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Version Control"]

version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "pydriller",
    "requests",
    "pandas"]

[project.urls]
Homepage = "https://github.com/bakhtos/mison"